# QuickDictate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  settings.example.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: GUIDE.md  RELEASING.md  SETTINGS_SYNC.md  SETTINGS_WINDOW.md  TRAY_VERIFICATION.md  providers.md
scripts/: check.ps1  gen_test_audio.ps1  package_source.ps1  refresh_test_exe.ps1  smoke_test.ps1  ui_shot.ps1
src/: about.rs  audio.rs  autostart.rs  config.rs  dev_trigger.rs  focus.rs  hotkeys.rs  icon.rs  keys.rs  local_stt.rs  main.rs  onboarding.rs  output.rs  settings_ui.rs  sound.rs  state.rs  sync.rs  text.rs  theme.rs  ui.rs  update.rs  voice_commands.rs
src/stt/: assemblyai.rs  dashscope.rs  deepgram.rs  elevenlabs.rs  google.rs  live_test.rs  local.rs  mock.rs  mod.rs  openai.rs  provider.rs
